[package]
name = "hacksaw"
description = "Lightweight selection tool for usage in screenshot scripts etc."
version = "1.0.4"
authors = ["expectocode <expectocode@gmail.com>"]
license-file = "LICENSE.txt"
repository = "https://github.com/neXromancers/hacksaw.git"
homepage = "https://github.com/neXromancers/hacksaw"
readme = "README.md"
keywords = ["x11", "screenshot", "selection", "nexromancers"]
edition = "2018"

[dependencies]
structopt = "0.3"

[dependencies.x11rb]
version = "0.5"
default-features = false
features = ["xkb", "shape"]
